# openenv-cloud-finops

./: Dockerfile  README.md  __init__.py  baseline.py  client.py  environment.py  graders.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  resources.py  server.py
server/: app.py  environment.py  models.py
